--- a/rofi/Makefile
+++ b/rofi/Makefile
@@ -1,9 +1,15 @@
 # Definiere die Zieldateien, die kopiert werden sollen
-FILES = adwaita-dark.rasi \
-				config.rasi
+FILES = config.rasi
+
+# Setze CONFIG_HOME auf XDG_CONFIG_HOME, wenn gesetzt, oder auf $HOME/.config
+CONFIG_HOME := $(or $(XDG_CONFIG_HOME),$(HOME)/.config)
+
+# Setze DATA_HOME auf XDG_DATA_HOME, wenn gesetzt, oder auf $HOME/.local/share
+DATA_HOME := $(or $(XDG_DATA_HOME),$(HOME)/.local/share)
 
 # Definiere das Zielverzeichnis
-TARGET_DIR = $(HOME)/.config/rofi
+# TARGET_DIR = $(HOME)/.config/rofi
+TARGET_DIR = $(CONFIG_HOME)/rofi
 
 INSTALL = install
 
@@ -14,6 +20,10 @@ all:
 
 # Regel für die Installation
 install: $(TARGET_DIR)
+	if [ ! -f config.rasi ] || [ config.rasi -ot config_template.rasi ]; then \
+		cp config_template.rasi config.rasi; \
+		sed -i "s|DATA_HOME_PLACEHOLDER|$(DATA_HOME)|" config.rasi; \
+	fi
 	@echo "Kopiere Rofi-Konfigurationsdateien nach $(TARGET_DIR)..."
 	# @cp $(FILES) $(TARGET_DIR)/
 	@$(INSTALL) -v --compare -m 644 $(FILES) $(TARGET_DIR)
