edit desktop file from template before installing it

--- a/desktop/Makefile
+++ b/desktop/Makefile
@@ -1,14 +1,14 @@
 # Definiere die Zieldateien, die kopiert werden sollen
 DESKTOP_FILES = hypr25-firefox_whatsapp.desktop
+
 ICONS = icons/WhatsApp.png
 
 # Setze DATA_HOME auf XDG_DATA_HOME, wenn gesetzt, oder auf $HOME/.local/share
 DATA_HOME := $(or $(XDG_DATA_HOME),$(HOME)/.local/share)
 
 # Definiere das Zielverzeichnis
-# DESKTOP_DIR = $${HOME}/.local/share/applications
-DESKTOP_DIR = $(DATA_HOME)/applications
-# ICONS_DIR = $${HOME}/.local/share/icons/hypr25
+APPLICATIONS_DIR = $(DATA_HOME)/applications
+
 ICONS_DIR = $(DATA_HOME)/icons/hypr25
 
 INSTALL = install
@@ -19,26 +19,35 @@ all:
 	@echo "Run 'make install' to install the scripts."
 
 # Regel für die Installation
-install: $(DESKTOP_DIR)
-	@echo "Kopiere Desktop-Dateien nach $(DESKTOP_DIR)..."
-	# @cp $(DESKTOP_FILES) $(DESKTOP_DIR)/
-	@$(INSTALL) -v --compare -m 644 $(DESKTOP_FILES) $(DESKTOP_DIR)
+install: $(APPLICATIONS_DIR)
+	for file in $(DESKTOP_FILES); do \
+		if [ ! -f $(APPLICATIONS_DIR)/$$file ] || [ $$file -nt $(APPLICATIONS_DIR)/$$file ]; then \
+			echo "Kopiere $$file nach $(APPLICATIONS_DIR)..."; \
+			$(INSTALL) -v --compare -m 644 $$file $(APPLICATIONS_DIR); \
+		else \
+			echo "$$file ist aktuell, überspringe..."; \
+		fi \
+	done
+	if [ ! -f hypr25-firefox_whatsapp.desktop ] || [ hypr25-firefox_whatsapp_template.desktop -nt hypr25-firefox_whatsapp.desktop ]; then \
+		cp hypr25-firefox_whatsapp_template.desktop hypr25-firefox_whatsapp.desktop; \
+		desktop-file-edit --set-icon=$(ICONS_DIR)/WhatsApp.png hypr25-firefox_whatsapp.desktop; \
+	fi
+	@echo "Kopiere Desktop-Dateien nach $(APPLICATIONS_DIR)..."
+	@$(INSTALL) -v --compare -m 644 $(DESKTOP_FILES) $(APPLICATIONS_DIR)
 	@echo "Kopiere Icons nach $(ICONS)"
 	@$(INSTALL) -v --compare -m 644 $(ICONS) $(ICONS_DIR)
 	@echo "Kopieren abgeschlossen. ✅"
-	#bash ../setup/prepare-whatsapp-desktop.sh
-	desktop-file-edit --set-icon=$(ICONS_DIR)/WhatsApp.png $(DESKTOP_DIR)/hypr25-firefox_whatsapp.desktop
 
 # Regel zum Erstellen des Zielverzeichnisses, falls es nicht existiert
-$(DESKTOP_DIR):
-	@mkdir -p $(DESKTOP_DIR)
+$(APPLICATIONS_DIR):
+	@mkdir -p $(APPLICATIONS_DIR)
 
 # Regel zum Entfernen der kopierten Dateien
 uninstall:
-	@echo "Lösche Desktop-Dateien aus $(DESKTOP_DIR)..."
-	@rm -f $(addprefix $(DESKTOP_DIR)/, $(DESKTOP_FILES))
+	@echo "Lösche Desktop-Dateien aus $(APPLICATIONS_DIR)..."
+	@rm -f $(addprefix $(APPLICATIONS_DIR)/, $(DESKTOP_FILES))
 	@echo "Leere Verzeichnisse werden entfernt (falls leer)..."
-	@rmdir --ignore-fail-on-non-empty $(DESKTOP_DIR)
+	@rmdir --ignore-fail-on-non-empty $(APPLICATIONS_DIR)
 	@echo "Lösche Icons aus $(ICONS_DIR)..."
 	@rm -f $(addprefix $(ICONS_DIR)/, $(ICONS))
 	@echo "Leere Verzeichnisse werden entfernt (falls leer)..."
