add window rules for floating and smaler calendar reminder and for pavucontrol

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -214,6 +214,12 @@ windowrulev2 = workspace special:keepassx, class:^(org.keepassxc.KeePassXC)$
 # Thunderbird mail compose window floating
 # windowrulev2 = float,class:^(thunderbird)$,initialTitle:^(Verfassen: \(Kein Betreff\))$
 # windowrulev2 = float,class:^(eu.betterbird.Betterbird)$,initialTitle:^(Verfassen: \(Kein Betreff\))$
+windowrulev2 = float,class:^(eu.betterbird.Betterbird)$,initialTitle:^(Kalendererinnerungen)$
+windowrulev2 = size 40% 30%, class:^(eu.betterbird.Betterbird)$,initialTitle:^(Kalendererinnerungen)$
+
+windowrulev2 = float, class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = size 60% 50%, class:^(org.pulseaudio.pavucontrol)$
+
 
 source = ~/.config/hypr/autostart.conf
 source = ~/.config/hypr/bindings.conf
