--- a/hyprland/autostart.conf
+++ b/hyprland/autostart.conf
@@ -11,7 +11,8 @@ exec-once = /usr/lib/xdg-desktop-portal-gtk
 
 # exec-once = $terminal
 exec-once = [workspace 1 silent] uwsm app -- firefox
-exec-once = [workspace 2 silent] uwsm app -- kitty
+# exec-once = [workspace 2 silent] uwsm app -- kitty
+exec-once = [workspace 2 silent] uwsm app -- kitty --session ~/.config/kitty/startup-session.conf
 exec-once = [workspace 3 silent] uwsm app -- betterbird
 
 exec-once = [workspace special:keepassx silent] keepassxc
