add keybind to move window to next/previous workspace

--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -62,6 +62,10 @@ bindd = $mainMod SHIFT, 8, Movetoworkspace 8, movetoworkspace, 8
 bindd = $mainMod SHIFT, 9, Movetoworkspace 9, movetoworkspace, 9
 # bindd = $mainMod SHIFT, 0, Movetoworkspace 1, movetoworkspace, 10
 
+# Move active window to next/previous workspace with mainMod + SHIFT + CTRL + arrow keys
+bindd = $mainMod SHIFT CTRL, right, Move window to next desktop, movetoworkspace, +1
+bindd = $mainMod SHIFT CTRL, left, Move window to previous desktop, movetoworkspace, -1
+
 # Example special workspace (scratchpad)
 bindd = $mainMod, S, Toggle special workspace, togglespecialworkspace, magic
 bindd = $mainMod SHIFT, S, Move to workspace, movetoworkspace, special:magic
