add keybind to reload config

--- a/hyprland/bindings.conf
+++ b/hyprland/bindings.conf
@@ -6,6 +6,8 @@
 $mainMod = SUPER # Sets "Windows" key as main modifier
 $resetSubMap = hyprctl dispatch submap reset
 
+bindd = $mainMod SHIFT, R, Reload config, exec, hyprctl reload
+
 # Set programs that you use
 $terminal = uwsm app -- kitty
 $fileManager = uwsm app -- nautilus --new-window
